TRAC-8539 fix alignment issue

--- a/src/app/marketplace/about-us/about-us.component.css
+++ b/src/app/marketplace/about-us/about-us.component.css
@@ -64,6 +64,10 @@
   flex-wrap: wrap;
 }
 
+.link-section-2 {
+  max-width: 500px;
+}
+
 .link-section {
   max-width: 350px;
 }
@@ -86,6 +90,35 @@
 }
 
 .link-section button {
+  background: #10ceac;
+  border-radius: 20px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+
+  color: #000000;
+  padding: 5px 15px 5px 15px;
+}
+
+.link-section-2 p {
+  text-align: start;
+  line-height: 22px;
+  font-size: 16px;
+  margin-bottom: 22px;
+}
+
+.link-section-2 h2 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px !important;
+  line-height: 29px;
+  /* identical to box height */
+
+  color: #10ceac;
+}
+
+.link-section-2 button {
   background: #10ceac;
   border-radius: 20px;
   font-style: normal;
